--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ option(ENABLE_DATA_TOOLS "Enable Valhalla data tools" ON)
 option(ENABLE_SERVICES "Enable Valhalla services" ON)
 option(ENABLE_HTTP "Enable the use of CURL" ON)
 option(ENABLE_PYTHON_BINDINGS "Enable Python bindings" ON)
+option(ENABLE_NODE_BINDINGS "Enable Node bindings" ON)
 option(ENABLE_CCACHE "Speed up incremental rebuilds via ccache" ON)
 option(ENABLE_COVERAGE "Build with coverage instrumentalisation" OFF)
 option(ENABLE_COMPILER_WARNINGS "Build with compiler warnings" OFF)
@@ -256,6 +257,11 @@ if(ENABLE_PYTHON_BINDINGS)
     set(ENABLE_PYTHON_BINDINGS OFF)
     message(WARNING "Skipping Python bindings... Install a development Python version including headers to compile the bindings.")
   endif()
+endif()
+
+## Node bindings
+if(ENABLE_NODE_BINDINGS)
+  add_subdirectory(src/bindings/node)
 endif()
 
 ## Executable targets
