--- a/cmake/CMakeSettings.json
+++ b/cmake/CMakeSettings.json
@@ -18,6 +18,7 @@
     { "VALHALLA_D_DEFAULT_ENABLE_DATA_TOOLS": "OFF" },
     { "VALHALLA_D_DEFAULT_ENABLE_HTTP": "OFF" },
     { "VALHALLA_D_DEFAULT_ENABLE_PYTHON_BINDINGS": "OFF" },
+    { "VALHALLA_D_DEFAULT_ENABLE_NODE_BINDINGS": "ON" },
     { "VALHALLA_D_DEFAULT_ENABLE_SERVICES": "OFF" },
     { "VALHALLA_D_DEFAULT_ENABLE_TESTS": "OFF" },
     { "VALHALLA_D_DEFAULT_ENABLE_TOOLS": "OFF" },
@@ -43,6 +44,7 @@
         { "name": "ENABLE_DATA_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_DATA_TOOLS}" },
         { "name": "ENABLE_HTTP", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_HTTP}" },
         { "name": "ENABLE_PYTHON_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_PYTHON_BINDINGS}" },
+        { "name": "ENABLE_NODE_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_NODE_BINDINGS}" },
         { "name": "ENABLE_SERVICES", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_SERVICES}" },
         { "name": "ENABLE_TESTS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TESTS}" },
         { "name": "ENABLE_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TOOLS}" },
@@ -68,6 +70,7 @@
         { "name": "ENABLE_DATA_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_DATA_TOOLS}" },
         { "name": "ENABLE_HTTP", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_HTTP}" },
         { "name": "ENABLE_PYTHON_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_PYTHON_BINDINGS}" },
+        { "name": "ENABLE_NODE_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_NODE_BINDINGS}" },
         { "name": "ENABLE_SERVICES", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_SERVICES}" },
         { "name": "ENABLE_TESTS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TESTS}" },
         { "name": "ENABLE_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TOOLS}" },
@@ -93,6 +96,7 @@
         { "name": "ENABLE_DATA_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_DATA_TOOLS}" },
         { "name": "ENABLE_HTTP", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_HTTP}" },
         { "name": "ENABLE_PYTHON_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_PYTHON_BINDINGS}" },
+        { "name": "ENABLE_NODE_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_NODE_BINDINGS}" },
         { "name": "ENABLE_SERVICES", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_SERVICES}" },
         { "name": "ENABLE_TESTS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TESTS}" },
         { "name": "ENABLE_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TOOLS}" },
@@ -117,6 +121,7 @@
         { "name": "ENABLE_UNDEFINED_SANITIZER", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_UNDEFINED_SANITIZER}" },
         { "name": "ENABLE_DATA_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_DATA_TOOLS}" },
         { "name": "ENABLE_PYTHON_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_PYTHON_BINDINGS}" },
+        { "name": "ENABLE_NODE_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_NODE_BINDINGS}" },
         { "name": "ENABLE_SERVICES", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_SERVICES}" },
         { "name": "ENABLE_TESTS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TESTS}" },
         { "name": "ENABLE_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TOOLS}" },
@@ -141,6 +146,7 @@
         { "name": "ENABLE_DATA_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_DATA_TOOLS}" },
         { "name": "ENABLE_HTTP", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_HTTP}" },
         { "name": "ENABLE_PYTHON_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_PYTHON_BINDINGS}" },
+        { "name": "ENABLE_NODE_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_NODE_BINDINGS}" },
         { "name": "ENABLE_SERVICES", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_SERVICES}" },
         { "name": "ENABLE_TESTS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TESTS}" },
         { "name": "ENABLE_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TOOLS}" },
@@ -165,6 +171,7 @@
         { "name": "ENABLE_DATA_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_DATA_TOOLS}" },
         { "name": "ENABLE_HTTP", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_HTTP}" },
         { "name": "ENABLE_PYTHON_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_PYTHON_BINDINGS}" },
+        { "name": "ENABLE_NODE_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_NODE_BINDINGS}" },
         { "name": "ENABLE_SERVICES", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_SERVICES}" },
         { "name": "ENABLE_TESTS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TESTS}" },
         { "name": "ENABLE_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TOOLS}" },
@@ -189,6 +196,7 @@
         { "name": "ENABLE_DATA_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_DATA_TOOLS}" },
         { "name": "ENABLE_HTTP", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_HTTP}" },
         { "name": "ENABLE_PYTHON_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_PYTHON_BINDINGS}" },
+        { "name": "ENABLE_NODE_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_NODE_BINDINGS}" },
         { "name": "ENABLE_SERVICES", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_SERVICES}" },
         { "name": "ENABLE_TESTS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TESTS}" },
         { "name": "ENABLE_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TOOLS}" },
@@ -213,6 +221,7 @@
         { "name": "ENABLE_DATA_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_DATA_TOOLS}" },
         { "name": "ENABLE_HTTP", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_HTTP}" },
         { "name": "ENABLE_PYTHON_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_PYTHON_BINDINGS}" },
+        { "name": "ENABLE_NODE_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_NODE_BINDINGS}" },
         { "name": "ENABLE_SERVICES", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_SERVICES}" },
         { "name": "ENABLE_TESTS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TESTS}" },
         { "name": "ENABLE_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TOOLS}" },
@@ -237,6 +246,7 @@
         { "name": "ENABLE_DATA_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_DATA_TOOLS}" },
         { "name": "ENABLE_HTTP", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_HTTP}" },
         { "name": "ENABLE_PYTHON_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_PYTHON_BINDINGS}" },
+        { "name": "ENABLE_NODE_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_NODE_BINDINGS}" },
         { "name": "ENABLE_SERVICES", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_SERVICES}" },
         { "name": "ENABLE_TESTS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TESTS}" },
         { "name": "ENABLE_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TOOLS}" },
@@ -261,6 +271,7 @@
         { "name": "ENABLE_DATA_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_DATA_TOOLS}" },
         { "name": "ENABLE_HTTP", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_HTTP}" },
         { "name": "ENABLE_PYTHON_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_PYTHON_BINDINGS}" },
+        { "name": "ENABLE_NODE_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_NODE_BINDINGS}" },
         { "name": "ENABLE_SERVICES", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_SERVICES}" },
         { "name": "ENABLE_TESTS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TESTS}" },
         { "name": "ENABLE_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TOOLS}" },
@@ -285,6 +296,7 @@
         { "name": "ENABLE_DATA_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_DATA_TOOLS}" },
         { "name": "ENABLE_HTTP", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_HTTP}" },
         { "name": "ENABLE_PYTHON_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_PYTHON_BINDINGS}" },
+        { "name": "ENABLE_NODE_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_NODE_BINDINGS}" },
         { "name": "ENABLE_SERVICES", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_SERVICES}" },
         { "name": "ENABLE_TESTS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TESTS}" },
         { "name": "ENABLE_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TOOLS}" },
@@ -309,6 +321,7 @@
         { "name": "ENABLE_DATA_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_DATA_TOOLS}" },
         { "name": "ENABLE_HTTP", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_HTTP}" },
         { "name": "ENABLE_PYTHON_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_PYTHON_BINDINGS}" },
+        { "name": "ENABLE_NODE_BINDINGS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_NODE_BINDINGS}" },
         { "name": "ENABLE_SERVICES", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_SERVICES}" },
         { "name": "ENABLE_TESTS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TESTS}" },
         { "name": "ENABLE_TOOLS", "value": "${env.VALHALLA_D_DEFAULT_ENABLE_TOOLS}" },
