--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "tape test/bindings/nodejs/*.test.js",
-    "install": "node-pre-gyp install --fallback-to-build=false || ./scripts/node_install.sh"
+    "install": "./scripts/node_install.sh"
   },
   "engines": {
     "node": ">=8.11.2"
@@ -29,16 +29,9 @@
     "node-addon-api": "1.4.0",
     "node-pre-gyp": "^0.10.0"
   },
-  "binary": {
-    "module_name": "node_valhalla",
-    "module_path": "./lib/binding",
-    "host": "https://mapbox-node-binary.s3.amazonaws.com",
-    "remote_path": "./valhalla/v{version}/{configuration}/",
-    "package_name": "{platform}-{arch}-napi-v{napi_version}.tar.gz"
-  },
   "devDependencies": {
-    "node-cmake": "^2.5.1",
     "aws-sdk": "^2.257.1",
+    "node-cmake": "^2.5.1",
     "tape": "^4.9.0"
   }
 }
